--- a/db.yaml
+++ b/db.yaml
@@ -1,5 +1,5 @@
 mysql_host : 'localhost'
 mysql_user : 'root'
-# Enter your mysql password comments
+# Enter your mysql password more
 mysql_password : ''
 mysql_db : 'flog_db'
