--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,19 @@
-Flask==2.0.1
+blinker==1.7.0
+click==8.1.7
+dominate==2.9.1
+Flask==3.0.2
+Flask-Bootstrap==3.3.7.1
+Flask-CKEditor==0.5.1
+Flask-MySQLdb==2.0.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
+itsdangerous==2.1.2
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+mysqlclient==2.2.4
+PyYAML==6.0.1
+SQLAlchemy==2.0.29
+typing_extensions==4.10.0
+visitor==0.1.3
+Werkzeug==3.0.1
+WTForms==3.1.2
